--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -177,3 +177,23 @@
       opacity: 1;
   }
 }
+.loading-animation {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.spinner {
+  margin: 0 auto;
+  width: 40px;
+  height: 40px;
+  border: 4px solid #ddd;
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
